--- a/kanpan.html
+++ b/kanpan.html
@@ -11,12 +11,14 @@ Hopepdm完善，略作修改
 <html xmlns="http://www.w3.org/1999/xhtml">
 <meta charset="utf-8" />
 <head>
-<script type="text/javascript" src="https://code.jquery.com/jquery-1.4.1.min.js"></script>
+<script type="text/javascript" src="http://code.jquery.com/jquery-1.4.1.min.js"></script>
 <script type="text/javascript">
-var stockCode="600804";
+
+var stockCode="002370";
+
 $(document).ready(function(){
     getNewData();
-     var tg=self.setInterval("getNewData()",2000);//N毫秒刷新一次，1000毫秒＝1秒
+     var tg=self.setInterval("getNewData()",500);//N毫秒刷新一次，1000毫秒＝1秒
 });
 //获取新数据
 function getNewData()
@@ -25,16 +27,33 @@ function getNewData()
     {
         stockCode=getQueryString('c');
     }
-    var type=stockCode[0]==6?1:2;
-    var durl="https://hq.sinajs.cn/list=sz002370";
+    var type=stockCode[0]==6?'sh':'sz';
+    var durl="http://hq.sinajs.cn/list="+type+stockCode;
     $.getScript(durl,function(data){
         //加载脚本并执行
-		var elements=hq_str_sz002370.split(",");
-		$('#result').text('');
-        $('#result').append("current:"+elements[3] +"-" +Math.random());
+		var dataType='var hq = hq_str_'+type+stockCode;
+		eval(dataType)
+		var elements=hq.split(",");
+		refreshData(elements);
     });
 }
 
+//刷新显示
+function refreshData(data)
+{ 	 
+	var result="";	
+	result+="<br/>";
+	result+= data[0].split('')[0]+data[0].split('')[1]+'\t'+'\t'+data[3]+'\t'+'\t' + 'min:' + data[5]+'\t'+"**" + parseInt(Math.random()*10) +'%';
+	
+	result+='<div style="height:10px;width:100px;background-color:red;"></div>'   	 
+	
+	result+='<br/>'+data[10]+'\t\t'+data[11];
+          
+	result+='<div style="height:10px;width:100px; border:dashed 1px #aaaaaa"></div>'             
+	result+=''+data[20] +'\t\t'+data[21];
+ 
+	$("#result").html(result);
+}
 //getQueryString获取url参数
 function getQueryString(name) {
     var reg = new RegExp("(^|&)" + name + "=([^&]*)(&|$)", "i");
