--- a/kanpan.html
+++ b/kanpan.html
@@ -11,7 +11,7 @@ Hopepdm完善，略作修改
 <html xmlns="http://www.w3.org/1999/xhtml">
 <meta charset="utf-8" />
 <head>
-<script type="text/javascript" src="http://code.jquery.com/jquery-1.4.1.min.js"></script>
+<script type="text/javascript" src="https://code.jquery.com/jquery-1.4.1.min.js"></script>
 <script type="text/javascript">
 
 var stockCode="002370";
@@ -28,7 +28,7 @@ function getNewData()
         stockCode=getQueryString('c');
     }
     var type=stockCode[0]==6?'sh':'sz';
-    var durl="http://hq.sinajs.cn/list="+type+stockCode;
+    var durl="https://hq.sinajs.cn/list="+type+stockCode;
     $.getScript(durl,function(data){
         //加载脚本并执行
 		var dataType='var hq = hq_str_'+type+stockCode;
