--- a/vuedemo.html
+++ b/vuedemo.html
@@ -4,7 +4,8 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title></title>
+		<link rel="fluid-icon" href="https://github.com/fluidicon.png" title="vuedemo">
+        
     </head>
     <body>
 
