--- a/vuedemo.html
+++ b/vuedemo.html
@@ -4,7 +4,8 @@
 <html>
     <head>
         <meta charset="UTF-8">
-		<link rel="fluid-icon" href="https://github.com/fluidicon.png" title="vuedemo">
+		<link rel="shortcut icon" href="https://github.com/fluidicon.png">
+		<title>vuedemo</title>
         
     </head>
     <body>
