--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     您的浏览器不支持 HTML5 canvas 标签。</canvas>
 <div id="xycoordinates" style="position:absolute;top:450px;left:300px"></div>
 <div id="xycoordina" style="position:absolute;top:300px;left:30px">hai</div>
-<div id="home" style="position: absolute; top: 300px; right: 30px; width:40px; height: 20px;"><a href="hopepdm.cn/blog">Home</a></div>
+<div id="home" style="position: absolute; top: 100px; right: 300px; width:40px; height: 20px;"><a href="/blog">Home</a></div>
 <script>
     var c=document.getElementById("myCanvas");
     var ctx=c.getContext("2d");
