--- a/index.html
+++ b/index.html
@@ -88,10 +88,10 @@
                             定位
                         </h2>
                         <p>
-                            简单的定位mouse例子
+                            简单的three.js示例
                         </p>
                         <p>
-                            <a class="btn" href="https://hopepdm.github.io">goooooo To »</a>
+                            <a class="btn" href="https://github.com/hopepdm/threejs">goooooo To »</a>
                         </p>
                         <h2>
                             shader粒子库
